@@ -1,5 +1,12 @@
 2010-12-21  Gavin Barraclough  <barraclough@apple.com>
 
+        Eeeep! build fix!
+
+        * wtf/OSAllocator.h:
+        (WTF::OSAllocator::decommitAndRelease):
+
+2010-12-21  Gavin Barraclough  <barraclough@apple.com>
+
         Ooops, fixed typo in comment.
 
         * wtf/OSAllocator.h:
